# turtlebot3_project1

./: README.md  docker-compose.yml
src/auto_explorer/: package.xml  setup.py
src/auto_explorer/auto_explorer/: explorer_node.py
src/ot3_city_mapper_no_space/: package.xml  setup.py
src/ot3_city_mapper_no_space/ot3_city_mapper_no_space/: mapper_node.py
temp/: Dockerfile  calculate_coverage.py  city.world
