<package format="3">
  <name>auto_explorer</name>
  <version>0.0.1</version>
  <description>Temporary package for autonomous exploration</description>
  <maintainer email="ahmed@example.com">Ahmed</maintainer>
  <license>Apache License 2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
