<?xml version="1.0"?>
<package format="2">
  <name>ot3_city_mapper_no_space</name>
  <version>0.0.1</version>
  <description>ROS 1 package for TurtleBot3 city mapping</description>
  <maintainer email="ahmedgouda20555@gmail.com">Gouda123</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

</package>

